--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Cryptomon-WinterProject/blockchain#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.1",
+    "node-fetch": "^3.2.0",
     "web3-utils": "^1.6.1"
   }
 }
