--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "homepage": "https://github.com/Cryptomon-WinterProject/blockchain#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.1",
+    "dotenv": "^16.0.0",
     "node-fetch": "^3.2.0",
+    "web3": "^1.7.0",
     "web3-utils": "^1.6.1"
   }
 }
